bug fixes and improvements and working log