@@ -12,13 +12,14 @@ import java.net.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.security.MessageDigest;
+import java.util.List;
 import java.util.concurrent.*;
 
 public class ClientHandler implements Runnable {
 
     private final Socket socket;
     private static final String HMAC_ALGO = "HmacSHA256";
-    private static final String SHARED_SECRET = "verysecretkey";  // Ideally load from config
+    private static final String SHARED_SECRET = "verysecretkey";
     private static final Path LOG_PATH = Paths.get("logs/alert_log.txt");
 
     public ClientHandler(Socket socket) {
@@ -33,45 +34,43 @@ public class ClientHandler implements Runnable {
             String line;
             while ((line = in.readLine()) != null) {
                 try {
-                    JSONType root = JsonIO.readObject(line);  // Parse directly from the socket input
-            
-                    if (!(root instanceof JSONObject json)) {
-                        out.write("ERROR: JSON is not an object\n");
+                    JSONType root = JsonIO.readObject(line);
+
+                    if (root == null || !(root instanceof JSONObject json)) {
+                        out.write("ERROR: Invalid message format\n");
                         out.flush();
                         continue;
                     }
-            
+
                     String clientId = json.get("client_id").toString();
                     String message = json.get("message").toString();
                     String timestamp = json.get("timestamp").toString();
                     String receivedHmac = json.get("hmac").toString();
-            
+
                     // Reconstruct and verify HMAC
                     String data = clientId + message + timestamp;
                     String computedHmac = computeHMAC(data, SHARED_SECRET);
-            
+
                     if (!computedHmac.equals(receivedHmac)) {
                         out.write("ERROR: Invalid HMAC\n");
                         out.flush();
                         System.out.println("[Security] Rejected message from " + clientId);
                         continue;
                     }
-            
-                    // Log securely with chained hash
+
                     String logEntry = clientId + "|" + timestamp + "|" + message;
                     appendLogWithHash(logEntry);
-            
+
                     out.write("ACK: Message received\n");
                     out.flush();
-            
                     System.out.println("[Server] Logged alert from " + clientId);
-            
+
                 } catch (Exception ex) {
                     out.write("ERROR: Invalid message format\n");
                     out.flush();
                     ex.printStackTrace();
                 }
-            }            
+            }
         } catch (IOException e) {
             System.err.println("[Handler] Error: " + e.getMessage());
         } finally {
@@ -97,13 +96,15 @@ public class ClientHandler implements Runnable {
     }
 
     private void appendLogWithHash(String entry) throws Exception {
-        // Ensure log directory exists
         Files.createDirectories(LOG_PATH.getParent());
 
         String previousHash = "0";
         if (Files.exists(LOG_PATH)) {
-            String lastLine = Files.readAllLines(LOG_PATH).getLast();
-            previousHash = lastLine.split("\\|\\|")[1];
+            List<String> lines = Files.readAllLines(LOG_PATH);
+            if (!lines.isEmpty()) {
+                String lastLine = lines.get(lines.size() - 1);
+                previousHash = lastLine.split("\\|\\|")[1];
+            }
         }
 
         String newHash = computeSHA256(entry + previousHash);
